# cheaper_openai

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Pipfile  README.md  TODO.md  build.sh  config.toml  log_for_changelog.py  pyproject.toml
.github/workflows/: build.yml
book_maker/: __main__.py  data.yml
chats/: __main__.py  ai_filesystem.py  bot_shell.py  bots.py  chat_room_name_a_module.py  chat_room_suggest_a_package.py  chatroom.py  cite.py  client_utils.py  code_review_bot.py  create.py  create_book.py  dialog_shell.py  document_shell.py  engines.py  fix_text.py  inventory.py  io_utils.py  markdown_utils.py  name_this_cheap.py  nuke_bots.py  spelling_utils.py  text_compression_bot.py  token_utils.py  utils.py
chats/tool_code/: initialize_nltk.py  pypi_info.py  python_viewers.py  text_shorteners.py
chats_v28/: __main__.py  create.py  create_book.py  create_book_chatgpt.py
chats_v28/ai_utils/: engines.py  io_utils.py  token_utils.py
chats_v28/md_utils/: markdown_utils.py
chats_v28/preprompt/: spelling_utils.py
chats_v28/tools/: cite.py
dead_code/: Pipfile
test/: test_basic.py
